feat (costumes): Implemented costumes for the api.
